// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders MediaWidget as empty unchanged 1`] = `
<div>
  <div
    class="memori-media-widget"
  />
</div>
`;

exports[`renders MediaWidget with hints unchanged 1`] = `
<div>
  <div
    class="memori-media-widget"
  >
    <ul
      class="memori-media--hints"
    >
      <li
        class="ease-out duration-500 opacity-0 translate-y-1"
      >
        <button
          class="memori-button memori-button--primary memori-button--rounded memori-button--padded memori-media--hint"
        >
          All right
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders MediaWidget with links unchanged 1`] = `
<div>
  <div
    class="memori-media-widget"
  >
    <div
      class="memori-media-items"
    >
      <div
        class="memori-media-items--grid memori-chat-scroll-item memori-media-items--agent"
      >
        <div
          class="memori-media-item ease-out duration-500 delay-0 opacity-0 scale-95"
        >
          <a
            class="memori-media-item--link memori-media-item--document-link"
            href="https://memori.ai/en"
            rel="noopener noreferrer"
            target="_blank"
            title="Memori Srl"
          >
            <div
              class="memori-media-item--document"
            >
              <div
                aria-hidden="true"
                class="memori-media-item--document-icon"
              >
                <svg
                  aria-hidden="true"
                  class="memori-media-item--document-icon-svg"
                  focusable="false"
                  role="img"
                  viewBox="0 0 1024 1024"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0 0 42 42h216v494z"
                  />
                </svg>
              </div>
              <div
                class="memori-media-item--document-info"
              >
                <div
                  class="memori-media-item--document-title"
                >
                  Memori Srl
                </div>
              </div>
              <span
                class="memori-media-item--document-badge"
              >
                Link
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders MediaWidget with media unchanged 1`] = `
<div>
  <div
    class="memori-media-widget"
  >
    <div
      class="memori-media-items"
    >
      <div
        class="memori-media-items--grid memori-chat-scroll-item memori-media-items--agent memori-media-items--single"
      >
        <div
          class="memori-media-item ease-out duration-500 delay-0 opacity-0 scale-95"
        >
          <a
            class="memori-media-item--link"
            href="https://api.lorem.space/image/game?w=150&h=220&hash=8B7BCDC2"
            rel="noopener noreferrer"
            target="_blank"
            title="Game Cover"
          >
            <div
              class="memori-card memori-media-item--card memori-media-item--image memori-card--with-cover memori-card--hoverable"
            >
              <div
                class="memori-spin"
              >
                <div
                  class="memori-card--cover"
                >
                  <picture
                    class="memori-media-item--figure"
                  >
                    <source
                      srcset="https://api.lorem.space/image/game?w=150&h=220&hash=8B7BCDC2"
                      type="image/jpeg"
                    />
                    <img
                      alt="Game Cover"
                      src="https://api.lorem.space/image/game?w=150&h=220&hash=8B7BCDC2"
                    />
                    <figcaption
                      class="memori-media-item--figure-caption"
                    >
                      Game Cover
                    </figcaption>
                  </picture>
                </div>
                <div
                  class="memori-card--content"
                >
                  <div
                    class="memori-card--children"
                  />
                </div>
                <div
                  class="memori-spin--spinner"
                >
                  <svg
                    aria-hidden="true"
                    class="memori-loading-icon"
                    focusable="false"
                    role="img"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
